--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block step %}create{% endblock step %}
   {% block content %}
 
       <div class="row">
@@ -9,7 +9,6 @@
         </div>
 
         <div class="col-md-8">
-          <small>&nbsp;</small>
           <h1>{% block page_title %}Create your project{% endblock page_title %}</h1>
           <h2>Give your project a name.</h2>
         </div>
