--- a/pinch/templates/validate.html
+++ b/pinch/templates/validate.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block step %}validate{% endblock step %}
   {% block content %}
         <div class="row">
 
@@ -8,7 +8,6 @@
         </div>
 
         <div class="col-md-8">
-          <small>&nbsp;</small>
           <h1>{% block page_title %}Validate{% endblock page_title %} <span>5-15 Minutes</span></h1>
           <h2><span>"Is this a project or a product?"</span> While both start with an idea, a product requires a market to serve.  If you want to build a product, you owe it to yourself to find your value proposition.</h2>
         </div>
