--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block step %}breakdown-mvp{% endblock step %}
 
   {% block content %}
       <div class="row">
@@ -6,7 +7,6 @@
         <div class="col-md-1">Icon</div>
 
           <div class="col-md-8">
-              <small>{{ project.name }}</small>
               <h1>{% block page_title %}Breakdown MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
 
               <form id="main_form" role="form" method="post">
