--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -14,7 +14,7 @@
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   						<li class="ticket">This is my task</li>
   					</ul>
   				</li>
@@ -22,7 +22,7 @@
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my other task</li>
 	  					<li class="ticket">This is my other task</li>
 	  					<li class="ticket">This is my other task</li>
@@ -32,7 +32,7 @@
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my final task</li>
 	  				</ul>
   				</li>
@@ -40,7 +40,7 @@
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   					<li class="ticket">This is my final task</li>
   					</ul>
   				</li>
@@ -56,7 +56,7 @@
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my task</li>
   					</ul>
   				</li>
@@ -64,7 +64,7 @@
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my other task</li>
 	  					<li class="ticket">This is my other task</li>
 	  					<li class="ticket">This is my other task</li>
@@ -74,7 +74,7 @@
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   					<li class="ticket">This is my final task</li>
   					</ul>
   				</li>
@@ -82,7 +82,7 @@
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my final task</li>
   					</ul>
   				</li>
@@ -98,7 +98,7 @@
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   						<li class="ticket">This is my task</li>
   					</ul>
   				</li>
@@ -106,7 +106,7 @@
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
 	  					<li class="ticket">This is my other task</li>
   						<li class="ticket">This is my other task</li>
   						<li class="ticket">This is my other task</li>
@@ -116,7 +116,7 @@
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   						<li class="ticket">This is my final task</li>
   					</ul>
   				</li>
@@ -124,7 +124,7 @@
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul class="drag_list">
+  					<ul class="drag_list clearfix">
   						<li class="ticket">This is my final task</li>
   					</ul>
   				</li>
