--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -7705,16 +7705,20 @@ button.close {
     background-size: 25px 20px;
   }
 }
+/* line 17, sass/pinch.scss */
+.navbar-header a.navbar-brand {
+  color: #fff;
+}
 
-/* line 19, sass/pinch.scss */
+/* line 20, sass/pinch.scss */
 .steps {
   margin-bottom: 25px;
 }
-/* line 21, sass/pinch.scss */
+/* line 22, sass/pinch.scss */
 .steps .step {
   text-align: center;
 }
-/* line 23, sass/pinch.scss */
+/* line 24, sass/pinch.scss */
 .steps .step:before {
   color: #cccccc;
   content: '>';
@@ -7722,15 +7726,15 @@ button.close {
   margin-left: 78px;
   position: absolute;
 }
-/* line 32, sass/pinch.scss */
+/* line 33, sass/pinch.scss */
 .steps .step:nth-child(8):before {
   display: none;
 }
-/* line 34, sass/pinch.scss */
+/* line 35, sass/pinch.scss */
 .steps .step:hover .hover {
   display: block;
 }
-/* line 35, sass/pinch.scss */
+/* line 36, sass/pinch.scss */
 .steps .hover {
   background: #feebc5;
   border-radius: 4px;
@@ -7744,7 +7748,7 @@ button.close {
   -moz-box-shadow: 0 8px 6px -6px #f8bf51;
   box-shadow: 0 8px 6px -6px #f8bf51;
 }
-/* line 47, sass/pinch.scss */
+/* line 48, sass/pinch.scss */
 .steps .hover:before {
   display: block;
   content: '';
@@ -7758,57 +7762,57 @@ button.close {
   border-bottom: 10px solid #feebc5;
 }
 
-/* line 63, sass/pinch.scss */
+/* line 64, sass/pinch.scss */
 body.create .step:hover .hover {
   display: none;
 }
-/* line 64, sass/pinch.scss */
+/* line 65, sass/pinch.scss */
 body.create .steps .create {
   font-weight: bold;
 }
 
-/* line 69, sass/pinch.scss */
+/* line 70, sass/pinch.scss */
 body.big-idea .step.big-idea:hover .hover, body.big-idea .step.validate:hover .hover, body.big-idea .step.create-mvp:hover .hover, body.big-idea .step.minify-mvp:hover .hover {
   display: none;
 }
-/* line 72, sass/pinch.scss */
+/* line 73, sass/pinch.scss */
 body.big-idea .steps .big-idea {
   font-weight: bold;
 }
 
-/* line 77, sass/pinch.scss */
+/* line 78, sass/pinch.scss */
 body.validate .step.validate:hover .hover, body.validate .step.create-mvp:hover .hover, body.validate .step.minify-mvp:hover .hover {
   display: none;
 }
-/* line 80, sass/pinch.scss */
+/* line 81, sass/pinch.scss */
 body.validate .steps .validate {
   font-weight: bold;
 }
 
-/* line 85, sass/pinch.scss */
+/* line 86, sass/pinch.scss */
 body.create-mvp .step.create-mvp:hover .hover, body.create-mvp .step.minify-mvp:hover .hover {
   display: none;
 }
-/* line 88, sass/pinch.scss */
+/* line 89, sass/pinch.scss */
 body.create-mvp .steps .create-mvp {
   font-weight: bold;
 }
 
-/* line 93, sass/pinch.scss */
+/* line 94, sass/pinch.scss */
 body.minify-mvp .step.minify-mvp:hover .hover {
   display: none;
 }
-/* line 96, sass/pinch.scss */
+/* line 97, sass/pinch.scss */
 body.minify-mvp .steps .minify-mvp {
   font-weight: bold;
 }
 
-/* line 100, sass/pinch.scss */
+/* line 101, sass/pinch.scss */
 body.breakdown-mvp .steps .breakdown-mvp {
   font-weight: bold;
 }
 
-/* line 102, sass/pinch.scss */
+/* line 103, sass/pinch.scss */
 button[type="submit"] {
   background-color: #f8bf51;
   border-top: none;
@@ -7821,18 +7825,18 @@ button[type="submit"] {
   font-weight: 300;
   margin-bottom: 40px;
 }
-/* line 113, sass/pinch.scss */
+/* line 114, sass/pinch.scss */
 button[type="submit"].btn {
   border-radius: 0;
 }
 
-/* line 118, sass/pinch.scss */
+/* line 119, sass/pinch.scss */
 html {
   position: relative;
   min-height: 100%;
 }
 
-/* line 123, sass/pinch.scss */
+/* line 124, sass/pinch.scss */
 body {
   background: #f8f7f7;
   color: #333333;
@@ -7842,7 +7846,7 @@ body {
   margin-bottom: 110px;
 }
 
-/* line 134, sass/pinch.scss */
+/* line 135, sass/pinch.scss */
 #footer {
   position: absolute;
   bottom: 0;
@@ -7855,17 +7859,17 @@ body {
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #EEE;
 }
-/* line 145, sass/pinch.scss */
+/* line 146, sass/pinch.scss */
 #footer img {
   margin: 5px 15px 5px 5px;
 }
 
-/* line 148, sass/pinch.scss */
+/* line 149, sass/pinch.scss */
 body.gravity-board #footer, body.gravity-board .steps {
   display: none;
 }
 
-/* line 152, sass/pinch.scss */
+/* line 153, sass/pinch.scss */
 .clear {
   clear: both;
   height: 0px;
@@ -7873,7 +7877,7 @@ body.gravity-board #footer, body.gravity-board .steps {
   font-size: 0px;
 }
 
-/* line 153, sass/pinch.scss */
+/* line 154, sass/pinch.scss */
 .strikethrough {
   text-decoration: line-through;
   padding: 2px 4px;
@@ -7884,21 +7888,21 @@ body.gravity-board #footer, body.gravity-board .steps {
   border-radius: 4px;
 }
 
-/* line 162, sass/pinch.scss */
+/* line 163, sass/pinch.scss */
 .highlight {
   background-color: yellow;
 }
 
-/* line 168, sass/pinch.scss */
+/* line 169, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 170, sass/pinch.scss */
+/* line 171, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 173, sass/pinch.scss */
+/* line 174, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -7906,32 +7910,32 @@ h2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
-/* line 174, sass/pinch.scss */
+/* line 175, sass/pinch.scss */
 h2 span {
   font-weight: normal;
 }
 
-/* line 178, sass/pinch.scss */
+/* line 179, sass/pinch.scss */
 form label {
   font-weight: 300;
 }
-/* line 179, sass/pinch.scss */
+/* line 180, sass/pinch.scss */
 form input[type="text"], form textarea.form-control {
   border: 1px solid #dddfe0;
   border-radius: 0;
   box-shadow: none;
   font-size: 21px;
 }
-/* line 185, sass/pinch.scss */
+/* line 186, sass/pinch.scss */
 form input[type="text"] {
   padding: 25px 15px;
 }
-/* line 188, sass/pinch.scss */
+/* line 189, sass/pinch.scss */
 form textarea.form-control {
   padding: 10px 15px;
   height: 10em;
 }
-/* line 192, sass/pinch.scss */
+/* line 193, sass/pinch.scss */
 form .codeholder {
   background: #EEE;
   border: 1px solid #DDD;
@@ -7939,11 +7943,11 @@ form .codeholder {
   margin-bottom: 15px;
 }
 
-/* line 200, sass/pinch.scss */
+/* line 201, sass/pinch.scss */
 .step-icon div {
   margin-top: 28px;
 }
-/* line 202, sass/pinch.scss */
+/* line 203, sass/pinch.scss */
 .step-icon div.big-idea {
   background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
   width: 64px;
@@ -7961,20 +7965,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 202, sass/pinch.scss */
+  /* line 203, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 202, sass/pinch.scss */
+  /* line 203, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
-/* line 211, sass/pinch.scss */
+/* line 212, sass/pinch.scss */
 .step-icon div.create-project {
   background: url("/static/images/create-project.png") no-repeat 0 0;
   width: 64px;
@@ -7992,20 +7996,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 211, sass/pinch.scss */
+  /* line 212, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 211, sass/pinch.scss */
+  /* line 212, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
-/* line 220, sass/pinch.scss */
+/* line 221, sass/pinch.scss */
 .step-icon div.validate {
   background: url("/static/images/validate.png") no-repeat 0 0;
   width: 64px;
@@ -8023,36 +8027,36 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 220, sass/pinch.scss */
+  /* line 221, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 220, sass/pinch.scss */
+  /* line 221, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 
-/* line 236, sass/pinch.scss */
+/* line 237, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 16px;
   padding: 15px;
 }
-/* line 240, sass/pinch.scss */
+/* line 241, sass/pinch.scss */
 .info-panel h3 {
   padding-top: 0px;
   margin-top: 0px;
 }
-/* line 241, sass/pinch.scss */
+/* line 242, sass/pinch.scss */
 .info-panel p {
   margin-bottom: 5px;
 }
-/* line 242, sass/pinch.scss */
+/* line 243, sass/pinch.scss */
 .info-panel p.example {
   font-size: 12px;
   font-style: italic;
@@ -8060,20 +8064,20 @@ form .codeholder {
   line-height: 14px;
   margin-bottom: 15px;
 }
-/* line 243, sass/pinch.scss */
+/* line 244, sass/pinch.scss */
 .info-panel .strike {
   text-decoration: line-through;
   background: #ff4540;
   padding: 2px;
 }
 
-/* line 250, sass/pinch.scss */
+/* line 251, sass/pinch.scss */
 .venn {
   background: url("/static/images/venn-diagram.png") no-repeat center 0;
   background-size: contain;
   min-height: 800px;
 }
-/* line 254, sass/pinch.scss */
+/* line 255, sass/pinch.scss */
 .venn textarea {
   background: transparent;
   border: none;
@@ -8087,44 +8091,44 @@ form .codeholder {
   vertical-align: bottom;
   width: 100%;
 }
-/* line 266, sass/pinch.scss */
+/* line 267, sass/pinch.scss */
 .venn textarea:focus {
   outline: none;
 }
-/* line 269, sass/pinch.scss */
+/* line 270, sass/pinch.scss */
 .venn textarea#offering {
   padding-left: 30px;
 }
-/* line 270, sass/pinch.scss */
+/* line 271, sass/pinch.scss */
 .venn textarea#valueProp {
   padding-right: 30px;
   padding-left: 30px;
 }
-/* line 271, sass/pinch.scss */
+/* line 272, sass/pinch.scss */
 .venn textarea#customer {
   padding-right: 30px;
 }
 @media only screen and (max-width: 1200px) {
-  /* line 275, sass/pinch.scss */
+  /* line 276, sass/pinch.scss */
   .venn textarea {
     margin-top: 90px;
     height: 245px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 281, sass/pinch.scss */
+  /* line 282, sass/pinch.scss */
   .venn textarea {
     height: 300px;
     margin-top: 115px;
   }
-  /* line 285, sass/pinch.scss */
+  /* line 286, sass/pinch.scss */
   .venn .form-group.col-md-4 {
     float: left;
     width: 33%;
   }
 }
 @media only screen and (max-width: 650px) {
-  /* line 291, sass/pinch.scss */
+  /* line 292, sass/pinch.scss */
   .venn textarea {
     font-size: 18px;
     margin-top: 90px;
@@ -8132,7 +8136,7 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 530px) {
-  /* line 298, sass/pinch.scss */
+  /* line 299, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 75px;
@@ -8140,14 +8144,14 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 500px) {
-  /* line 305, sass/pinch.scss */
+  /* line 306, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 55px;
     height: 160px;
   }
 }
-/* line 311, sass/pinch.scss */
+/* line 312, sass/pinch.scss */
 .venn .validate-action {
   margin-top: 100px;
 }
