--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">pinch</a>
+          <a class="navbar-brand" href="/">Pinch</a>
         </div>
         <div class="collapse navbar-collapse">
           <!-- <ul class="nav navbar-nav">
