Hide steps on homepage

--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -7865,11 +7865,16 @@ body {
 }
 
 /* line 149, sass/pinch.scss */
+body.home .steps {
+  display: none;
+}
+
+/* line 150, sass/pinch.scss */
 body.gravity-board #footer, body.gravity-board .steps {
   display: none;
 }
 
-/* line 153, sass/pinch.scss */
+/* line 154, sass/pinch.scss */
 .clear {
   clear: both;
   height: 0px;
@@ -7877,7 +7882,7 @@ body.gravity-board #footer, body.gravity-board .steps {
   font-size: 0px;
 }
 
-/* line 154, sass/pinch.scss */
+/* line 155, sass/pinch.scss */
 .strikethrough {
   text-decoration: line-through;
   padding: 2px 4px;
@@ -7888,21 +7893,21 @@ body.gravity-board #footer, body.gravity-board .steps {
   border-radius: 4px;
 }
 
-/* line 163, sass/pinch.scss */
+/* line 164, sass/pinch.scss */
 .highlight {
   background-color: yellow;
 }
 
-/* line 169, sass/pinch.scss */
+/* line 170, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 171, sass/pinch.scss */
+/* line 172, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 174, sass/pinch.scss */
+/* line 175, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -7910,32 +7915,32 @@ h2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
-/* line 175, sass/pinch.scss */
+/* line 176, sass/pinch.scss */
 h2 span {
   font-weight: normal;
 }
 
-/* line 179, sass/pinch.scss */
+/* line 180, sass/pinch.scss */
 form label {
   font-weight: 300;
 }
-/* line 180, sass/pinch.scss */
+/* line 181, sass/pinch.scss */
 form input[type="text"], form textarea.form-control {
   border: 1px solid #dddfe0;
   border-radius: 0;
   box-shadow: none;
   font-size: 21px;
 }
-/* line 186, sass/pinch.scss */
+/* line 187, sass/pinch.scss */
 form input[type="text"] {
   padding: 25px 15px;
 }
-/* line 189, sass/pinch.scss */
+/* line 190, sass/pinch.scss */
 form textarea.form-control {
   padding: 10px 15px;
   height: 10em;
 }
-/* line 193, sass/pinch.scss */
+/* line 194, sass/pinch.scss */
 form .codeholder {
   background: #EEE;
   border: 1px solid #DDD;
@@ -7943,11 +7948,11 @@ form .codeholder {
   margin-bottom: 15px;
 }
 
-/* line 201, sass/pinch.scss */
+/* line 202, sass/pinch.scss */
 .step-icon div {
   margin-top: 28px;
 }
-/* line 203, sass/pinch.scss */
+/* line 204, sass/pinch.scss */
 .step-icon div.big-idea {
   background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
   width: 64px;
@@ -7965,20 +7970,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 203, sass/pinch.scss */
+  /* line 204, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 203, sass/pinch.scss */
+  /* line 204, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
-/* line 212, sass/pinch.scss */
+/* line 213, sass/pinch.scss */
 .step-icon div.create-project {
   background: url("/static/images/create-project.png") no-repeat 0 0;
   width: 64px;
@@ -7996,20 +8001,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 212, sass/pinch.scss */
+  /* line 213, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 212, sass/pinch.scss */
+  /* line 213, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
-/* line 221, sass/pinch.scss */
+/* line 222, sass/pinch.scss */
 .step-icon div.validate {
   background: url("/static/images/validate.png") no-repeat 0 0;
   width: 64px;
@@ -8027,36 +8032,36 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 221, sass/pinch.scss */
+  /* line 222, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 221, sass/pinch.scss */
+  /* line 222, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 
-/* line 237, sass/pinch.scss */
+/* line 238, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 16px;
   padding: 15px;
 }
-/* line 241, sass/pinch.scss */
+/* line 242, sass/pinch.scss */
 .info-panel h3 {
   padding-top: 0px;
   margin-top: 0px;
 }
-/* line 242, sass/pinch.scss */
+/* line 243, sass/pinch.scss */
 .info-panel p {
   margin-bottom: 5px;
 }
-/* line 243, sass/pinch.scss */
+/* line 244, sass/pinch.scss */
 .info-panel p.example {
   font-size: 12px;
   font-style: italic;
@@ -8064,20 +8069,20 @@ form .codeholder {
   line-height: 14px;
   margin-bottom: 15px;
 }
-/* line 244, sass/pinch.scss */
+/* line 245, sass/pinch.scss */
 .info-panel .strike {
   text-decoration: line-through;
   background: #ff4540;
   padding: 2px;
 }
 
-/* line 251, sass/pinch.scss */
+/* line 252, sass/pinch.scss */
 .venn {
   background: url("/static/images/venn-diagram.png") no-repeat center 0;
   background-size: contain;
   min-height: 800px;
 }
-/* line 255, sass/pinch.scss */
+/* line 256, sass/pinch.scss */
 .venn textarea {
   background: transparent;
   border: none;
@@ -8091,44 +8096,44 @@ form .codeholder {
   vertical-align: bottom;
   width: 100%;
 }
-/* line 267, sass/pinch.scss */
+/* line 268, sass/pinch.scss */
 .venn textarea:focus {
   outline: none;
 }
-/* line 270, sass/pinch.scss */
+/* line 271, sass/pinch.scss */
 .venn textarea#offering {
   padding-left: 30px;
 }
-/* line 271, sass/pinch.scss */
+/* line 272, sass/pinch.scss */
 .venn textarea#valueProp {
   padding-right: 30px;
   padding-left: 30px;
 }
-/* line 272, sass/pinch.scss */
+/* line 273, sass/pinch.scss */
 .venn textarea#customer {
   padding-right: 30px;
 }
 @media only screen and (max-width: 1200px) {
-  /* line 276, sass/pinch.scss */
+  /* line 277, sass/pinch.scss */
   .venn textarea {
     margin-top: 90px;
     height: 245px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 282, sass/pinch.scss */
+  /* line 283, sass/pinch.scss */
   .venn textarea {
     height: 300px;
     margin-top: 115px;
   }
-  /* line 286, sass/pinch.scss */
+  /* line 287, sass/pinch.scss */
   .venn .form-group.col-md-4 {
     float: left;
     width: 33%;
   }
 }
 @media only screen and (max-width: 650px) {
-  /* line 292, sass/pinch.scss */
+  /* line 293, sass/pinch.scss */
   .venn textarea {
     font-size: 18px;
     margin-top: 90px;
@@ -8136,7 +8141,7 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 530px) {
-  /* line 299, sass/pinch.scss */
+  /* line 300, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 75px;
@@ -8144,14 +8149,14 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 500px) {
-  /* line 306, sass/pinch.scss */
+  /* line 307, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 55px;
     height: 160px;
   }
 }
-/* line 312, sass/pinch.scss */
+/* line 313, sass/pinch.scss */
 .venn .validate-action {
   margin-top: 100px;
 }
