--- a/pinch/templates/index.html
+++ b/pinch/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block step %}home{% endblock step %}
   {% block content %}
   	<h1>This is our homepage</h1>
   	<p><a href="/walkthrough/">Create a new project</a></p>
