--- a/pinch/templates/create_mvp.html
+++ b/pinch/templates/create_mvp.html
@@ -5,7 +5,7 @@
         <div class="row">
 
         <div class="col-md-1 step-icon">
-          <div class="create_mvp"></div>
+          <div class="create-mvp"></div>
         </div>
 
         <div class="col-md-8">
