--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -8170,16 +8170,42 @@ body {
   background-color: yellow;
 }
 
-/* line 166, sass/pinch.scss */
+/* line 163, sass/pinch.scss */
+.center {
+  text-align: center;
+}
+
+/* line 165, sass/pinch.scss */
+.create-button {
+  background-color: #AAA;
+  border-top: none;
+  border-right: none;
+  border-bottom: 2px solid #8d9497;
+  border-left: 2px solid #8d9497;
+  color: #fff;
+  font-size: 21px;
+  font-weight: 300;
+  margin-top: 20px;
+  padding: 5px 15px;
+}
+
+/* line 177, sass/pinch.scss */
+.create-button:hover {
+  background-color: #f8bf51;
+  color: #FFF;
+  text-decoration: none;
+}
+
+/* line 184, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 168, sass/pinch.scss */
+/* line 186, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 171, sass/pinch.scss */
+/* line 189, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -8187,32 +8213,32 @@ h2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
-/* line 172, sass/pinch.scss */
+/* line 190, sass/pinch.scss */
 h2 span {
   font-weight: normal;
 }
 
-/* line 176, sass/pinch.scss */
+/* line 194, sass/pinch.scss */
 form label {
   font-weight: 300;
 }
-/* line 177, sass/pinch.scss */
+/* line 195, sass/pinch.scss */
 form input[type="text"], form textarea.form-control {
   border: 1px solid #dddfe0;
   border-radius: 0;
   box-shadow: none;
   font-size: 21px;
 }
-/* line 183, sass/pinch.scss */
+/* line 201, sass/pinch.scss */
 form input[type="text"] {
   padding: 25px 15px;
 }
-/* line 186, sass/pinch.scss */
+/* line 204, sass/pinch.scss */
 form textarea.form-control {
   padding: 10px 15px;
   height: 10em;
 }
-/* line 190, sass/pinch.scss */
+/* line 208, sass/pinch.scss */
 form .codeholder {
   background: #EEE;
   border: 1px solid #DDD;
@@ -8220,11 +8246,11 @@ form .codeholder {
   margin-bottom: 15px;
 }
 
-/* line 198, sass/pinch.scss */
+/* line 216, sass/pinch.scss */
 .step-icon div {
   margin-top: 28px;
 }
-/* line 200, sass/pinch.scss */
+/* line 218, sass/pinch.scss */
 .step-icon div.big-idea {
   background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
   width: 64px;
@@ -8242,20 +8268,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 200, sass/pinch.scss */
+  /* line 218, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 200, sass/pinch.scss */
+  /* line 218, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
-/* line 209, sass/pinch.scss */
+/* line 227, sass/pinch.scss */
 .step-icon div.create-project {
   background: url("/static/images/create-project.png") no-repeat 0 0;
   width: 64px;
@@ -8273,20 +8299,20 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 209, sass/pinch.scss */
+  /* line 227, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 209, sass/pinch.scss */
+  /* line 227, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
-/* line 218, sass/pinch.scss */
+/* line 236, sass/pinch.scss */
 .step-icon div.validate {
   background: url("/static/images/validate.png") no-repeat 0 0;
   width: 64px;
@@ -8304,36 +8330,36 @@ form .codeholder {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 218, sass/pinch.scss */
+  /* line 236, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 218, sass/pinch.scss */
+  /* line 236, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 
-/* line 234, sass/pinch.scss */
+/* line 252, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 16px;
   padding: 15px;
 }
-/* line 238, sass/pinch.scss */
+/* line 256, sass/pinch.scss */
 .info-panel h3 {
   padding-top: 0px;
   margin-top: 0px;
 }
-/* line 239, sass/pinch.scss */
+/* line 257, sass/pinch.scss */
 .info-panel p {
   margin-bottom: 5px;
 }
-/* line 240, sass/pinch.scss */
+/* line 258, sass/pinch.scss */
 .info-panel p.example {
   font-size: 12px;
   font-style: italic;
@@ -8341,20 +8367,20 @@ form .codeholder {
   line-height: 14px;
   margin-bottom: 15px;
 }
-/* line 241, sass/pinch.scss */
+/* line 259, sass/pinch.scss */
 .info-panel .strike {
   text-decoration: line-through;
   background: #ff4540;
   padding: 2px;
 }
 
-/* line 248, sass/pinch.scss */
+/* line 266, sass/pinch.scss */
 .venn {
   background: url("/static/images/venn-diagram.png") no-repeat center 0;
   background-size: contain;
   min-height: 800px;
 }
-/* line 252, sass/pinch.scss */
+/* line 270, sass/pinch.scss */
 .venn textarea {
   background: transparent;
   border: none;
@@ -8368,44 +8394,44 @@ form .codeholder {
   vertical-align: bottom;
   width: 100%;
 }
-/* line 264, sass/pinch.scss */
+/* line 282, sass/pinch.scss */
 .venn textarea:focus {
   outline: none;
 }
-/* line 267, sass/pinch.scss */
+/* line 285, sass/pinch.scss */
 .venn textarea#offering {
   padding-left: 30px;
 }
-/* line 268, sass/pinch.scss */
+/* line 286, sass/pinch.scss */
 .venn textarea#valueProp {
   padding-right: 30px;
   padding-left: 30px;
 }
-/* line 269, sass/pinch.scss */
+/* line 287, sass/pinch.scss */
 .venn textarea#customer {
   padding-right: 30px;
 }
 @media only screen and (max-width: 1200px) {
-  /* line 273, sass/pinch.scss */
+  /* line 291, sass/pinch.scss */
   .venn textarea {
     margin-top: 90px;
     height: 245px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 279, sass/pinch.scss */
+  /* line 297, sass/pinch.scss */
   .venn textarea {
     height: 300px;
     margin-top: 115px;
   }
-  /* line 283, sass/pinch.scss */
+  /* line 301, sass/pinch.scss */
   .venn .form-group.col-md-4 {
     float: left;
     width: 33%;
   }
 }
 @media only screen and (max-width: 650px) {
-  /* line 289, sass/pinch.scss */
+  /* line 307, sass/pinch.scss */
   .venn textarea {
     font-size: 18px;
     margin-top: 90px;
@@ -8413,7 +8439,7 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 530px) {
-  /* line 296, sass/pinch.scss */
+  /* line 314, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 75px;
@@ -8421,14 +8447,14 @@ form .codeholder {
   }
 }
 @media only screen and (max-width: 500px) {
-  /* line 303, sass/pinch.scss */
+  /* line 321, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 55px;
     height: 160px;
   }
 }
-/* line 309, sass/pinch.scss */
+/* line 327, sass/pinch.scss */
 .venn .validate-action {
   margin-top: 100px;
 }
