--- a/pinch/templates/index.html
+++ b/pinch/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block step %}home{% endblock step %}
   {% block content %}
-	<div class="row">
+	<div class="row home-row">
  		<div class="col-md-2"></div>
  		<div class="col-md-8 center">
 			<img src="/static/images/logo.png" width="20%" />
