--- a/pinch/templates/minify_mvp.html
+++ b/pinch/templates/minify_mvp.html
@@ -4,7 +4,7 @@
   
   <div class="row">
 
-      <div class="col-md-1">
+      <div class="col-md-1 step-icon">
       	<div class="minify-mvp"></div>
       </div>
 
